WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293906
[UnifiedPDF][iOS] Relative scroll position is not preserved when resizing web view
https://bugs.webkit.org/show_bug.cgi?id=293906
Summary
[UnifiedPDF][iOS] Relative scroll position is not preserved when resizing web...
Aditya Keerthi
Reported
2025-06-02 09:54:27 PDT
rdar://152160616
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-06-02 10:06:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46211
EWS
Comment 2
2025-06-02 15:10:42 PDT
Committed
295715@main
(4312171edbbf): <
https://commits.webkit.org/295715@main
> Reviewed commits have been landed. Closing PR #46211 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug